# donut_lora

./: DocMeta_Example.ipynb  README.md  data_archiving.ipynb  donut_author_extraction.ipynb  donut_lora_meta.ipynb  donut_lora_meta_pt.ipynb  donut_lora_meta_pt_json.ipynb  knowlege_graph.ipynb  openai_meta_extraction.ipynb  pyproject.toml
archive/: donut_lora_meta_pt_json.ipynb
