[tool.poetry]
name = "donut-lora"
version = "0.1.0"
description = ""
authors = ["Jonas Gann <jonas@gann.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pdf2image = "^1.17.0"
openai = "^1.47.1"
pytesseract = "^0.3.13"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
